--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@
 .start-btn{
     color: white;
     background-color: rgb(87, 9, 160);
+    font-size: 20px;
     margin: 16px 16px 16px 20px;
     padding: 14px 34px;
     border-radius: 10px;
