--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@
     text-align: center;
 }
 
-.start-btn{
+.start-btn, .option{
     color: white;
     background-color: rgb(87, 9, 160);
     font-size: 20px;
@@ -31,6 +31,10 @@
     padding: 14px 34px;
     border-radius: 10px;
     display: inline-block;
+}
+
+.option{
+    float: left;
 }
 
 .scores{
