--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,18 @@
+:root{
+    --primary-color:rgb(87, 9, 160);
+    --secondary-color:rgb(209, 134, 224);
+}
+
 *{
     font-family: Arial, Helvetica, sans-serif;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    color:var(--primary-color);
 }
 
 .header{
@@ -17,28 +30,15 @@
 }
 
 .quiz-container{
-    margin: auto;
-    width: 30%;
-    height: 100px;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
     text-align: center;
 }
 
-.selections{
-    font-weight: bold;
-}
-
-.option{
-    width:50%;
-    float: left;
-}
-
-.option:hover{
-    background-color:rgb(209, 134, 224);
-}
-
-#select-btn{
+.choice, #select-btn{
     color: white;
-    background-color: rgb(87, 9, 160);
+    background-color: var(--primary-color);
     font-size: 20px;
     margin: 16px 16px 16px 20px;
     padding: 14px 34px;
@@ -46,10 +46,24 @@
     display: inline-block;
 }
 
+#select-btn:hover{
+    cursor: pointer;
+    background-color: var(--secondary-color);
+}
 
+.choice {
+    width: 10%;
+    flex: column;
+    text-align: left;
+}
+
+.choice:hover{
+    cursor: pointer;
+    background-color:var(--secondary-color);
+}
 
 .scores{
-    color:rgb(209, 134, 224);
+    color:var(--secondary-color);
     font-weight: bold;
 }
 
