delete scores.js as it is duplicate, update script.js with all quiz qna

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,4 +74,9 @@ a:hover{
         width: 30%;
         font-size: 1rem;
     }
+    .choice:hover{
+        cursor: pointer;
+        background-color:var(--primary-color);
+    }
+
 }
